# licenseServer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.cfg  main.cc
.github/workflows/: cmake-multi-platform.yml
Client/: CMakeLists.txt  config.cfg  main.cc
Client/include/: ConfigImporter.h  SecondaryWindow.h  ServerConnection.h
Client/proto/: ClientProto.proto  proto.proto
Client/src/: ConfigImporter.cc  ServerConnection.cc
Client/test/: CMakeLists.txt
Server/: CMakeLists.txt
Server/include/: ClientConnection.h
Server/src/: ConfigImporter.cc
Server/test/: CMakeLists.txt  ImageProcessingTest.h  main.cc
include/: ClientConnection.h  ConfigImporter.h  ImageConvertor.h  ImageProcessing.h  MainWindow.h  SecondaryWindow.h  ServerConnection.h
proto/: proto.proto
src/: ConfigImporter.cc  ImageConvertor.cc  ImageProcessing.cc  MainWindow.cc  SecondaryWindow.cc  ServerConnection.cc
ssl_files/: generate_ssl.sh
test/: CMakeLists.txt  ImageConvertorTest.cc  ImageConvertorTest.h  ImageProcessingTest.cc
test/src/: tests.cc
